--- a/res/layout/activity_tweet.xml
+++ b/res/layout/activity_tweet.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rl"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -26,34 +27,48 @@
         android:background="#4099FF"
         android:onClick="tweet"
         android:text="@string/btn_tweet" />
-    
+
     <ImageView
         android:id="@+id/ivProfile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="60dp"/>
+        android:layout_marginTop="60dp" />
 
     <LinearLayout
+        android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="65dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginBottom="15dp"
         android:layout_marginLeft="40dp"
-        android:layout_marginBottom="15dp">
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="65dp"
+        android:orientation="vertical" >
+
         <TextView
             android:id="@+id/tvName"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
+
         <EditText
             android:id="@+id/etBody"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-   <!--       <TextView
+            android:layout_height="wrap_content"
+            android:maxLength="141" />
+        <!--
+              <TextView
             android:id="@+id/tvTimestamp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>-->
+            android:layout_height="wrap_content"/>
+        -->
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/tvCount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:text="@string/tv_count" />
 
 </RelativeLayout>
